--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ body {
     font-family: 'Arial', sans-serif;
     background:
       linear-gradient(rgba(0,0,0,0.55), rgba(0,0,0,0.75)),
-      url("");
+      url("https://raw.githubusercontent.com/UdayRathod7180/Akanksha-valentine/main/akanksha.jpg");
     background-size: cover;
     background-position: center;
     display: flex;
